# Splinesurf_libigl

./: CMakeLists.txt  README.md  main.cpp  splinesurf.cpp  splinesurf.h
data/: bunn_small_original faces.txt  bunn_small_working faces.txt
original/: CMakeLists.txt
original/apps/: CMakeLists.txt
original/apps/splinegui/: CMakeLists.txt  app.cpp  app.h  splinegui.cpp
original/libs/: CMakeLists.txt
original/libs/VTP/: geodesic_algorithm_exact.h  geodesic_memory.h
original/libs/realtime/: window.cpp
original/libs/splinesurf/: CMakeLists.txt  karcher.cpp  karcher.h  spline.cpp  spline.h  splineio.cpp
original/libs/yocto/: yocto_mesh.cpp
original/libs/yocto_gui/: yocto_opengl.cpp
original/scripts/: build.py  clean.py  release.py  sync_yocto.sh  todo.md  xcode.py
